--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -35,16 +35,28 @@
 
 <div class="tabs-content">
   <div class="content active dropzone" id="tabpending">
-	<!--<section class="container topjob hoverdim">
 			<div class="row title jobs-title">
-				<div class="small-11 columns">
+				<div class="small-12 columns">
 					<h4 class="up-next">Up Next</h4>
 					<h4 class="now-running">Now Running</h4>
-                    <h4 class="no-jobs">No Jobs</h4>
+                    <div class="no-jobs">
+						<h4>No Jobs</h4>
+						<div class="without-job">
+							<div class="submitWrapper">
+								<div class="submitActions">
+									<img src="images/click.png">
+									<p>or</p>
+									<h5 class='no-job'>Drag files here</h5>
+								</div>
+							</div>
+							<div class="small-11 columns">
+								<h5 class='add-job-please'></h5>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-            
-			<div class="row">
+			<!--<div class="row">
 				<div class="small-8 jobs-wrapper">
 					<div class="small-8 medium-8 columns with-job">
 						<h4 class='nextJobTitle'></h4>
@@ -52,18 +64,7 @@
 							<h5 class='nextJobDesc'></h5>
 						</div>
 					</div>
-					<div class="small-12 columns without-job">
-                        <div class="submitWrapper">
-                            <div class="submitActions">
-                                <img src="images/click.png">
-                                <p>or</p>
-                                <h5 class='no-job'>Drag files here</h5>
-                            </div>
-                        </div>
-						<div class="small-11 columns">
-							<h5 class='add-job-please'></h5>
-						</div>
-					</div>
+
 				</div>
 
 			<div class="small-8 medium-12 icon-row">
@@ -101,12 +102,13 @@
                     <div class="job-status-indicator"></div>
                 </div>
             </div>
-		</div>
-		</section>-->
+		</div>-->
+		
 		
 
-  </div>
+ 
 <div style="width:100%" id="queue_table"></div>
+ </div>
   <div class="content" id="tabhistory">
 		<!-- JOB HISTORY LISTING -->
 		<table class="small-12 columns" style="width:100%" id="history_table">
@@ -170,10 +172,7 @@
     }
   });
   
-  function makeActions(){
-    var actions = '<div> <div class="small-2 medium-4 columns play-button" style="text-align:right;"> <div class="radial_progress"> <div class="perecent_circle"> <div class="mask full"><div class="fill"></div></div><div class="mask half"><div class="fill"></div><div class="fill fix"> </div> </div> <div class="shadow"> </div> </div> <div class="inset"> <div id="run-next" class="play"><span></span></div> </div></div></div></div><div class="small-8 medium-12 icon-row"><div class="medium-1 small-2 columns"><a class="preview" title="Preview Job"><img  class="svg" src="css/images/visible9.svg"></a></div><div class="medium-1 small-2 columns"><a class="edit" title="Edit Job"><img class="svg" src="images/edit_icon.png"></a></div><div class="medium-1 small-2 columns"><a class="download" title="Download Job"><img  class="svg" src="css/images/download151.svg"></a></div><div class="medium-1 small-2 columns"><a class="cancel" title="Cancel Job"><img  class="svg" src="css/images/recycling10.svg"></a></div><div class="sm-1 columns"></div></div><div class="row"></div><div class="job-lights-container"><div class="job-status-light one off"><div class="job-status-indicator"></div></div><div class="job-status-light two off"><div class="job-status-indicator"></div></div><div class="job-status-light three off"><div class="job-status-indicator"></div></div></div>'
-    return actions;
-}
+
 
   
   
@@ -184,9 +183,9 @@
   	//Foundation Init
 	$(document).foundation();
 
-	fabmo.on('change', function(status) {
-		console.log(status);
-		if(topic === 'jobs' && status.state != 'running') {
+	fabmo.on('change', function(topic) {
+		console.log(topic);
+		if(topic === 'jobs') {
 			updateQueue();
 			updateHistory();
 		}
@@ -226,8 +225,7 @@
 				if(err) {
 					fabmo.notify(err);
 				} else {
-					$('.play').addClass('active');
-					setProgress({status});
+					updateQueue();
 				}
 			});	
 		}		
