--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1748,13 +1748,13 @@
           <div class="row collapse">
             <label>New Password</label>
             <div class="small-12 columns">
-              <input type="text" id="input-user-password" class="input"/>
+              <input type="password" id="input-user-password" class="input"/>
             </div>
           </div>
           <div class="row collapse">
             <label>Confirm Password</label>
             <div class="small-12 columns">
-              <input type="text" id="input-user-passwordConfirmation" class="input"/>
+              <input type="password" id="input-user-passwordConfirmation" class="input"/>
             </div>
           </div>
           <button id="submit-user-password" class="button radius small">Submit</button>
@@ -1779,8 +1779,8 @@
             </thead>
             <tbody class="row user-listing"></tbody>
           </table>
-        </div>
         <button id="add-user"class="button radius small">Add new user</button>
+      </div>
       </fieldset>
   </section>
 
