--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -251,26 +251,27 @@
 		});
 	});
 
-	$( window ).resize(function() {
-  		setJobheight();
-	}).resize();
+	// $( window ).resize(function() {
+  	// 	setJobheight();
+	// }).resize();
 	
 	fabmo.on('status', function(status) {
+		console.log();
         handleStatusReport(status);
         if (status.job == null && status.state != 'idle') {
             $('.play-button').hide();
-        } else if (status.state == 'idle' && $('.with-job').data('job') == true) {
+        } else if (status.state == 'idle' && el.firstChild) {
            $('.play-button').show();
         }
-        if (status.state == 'running') {
-            $('.job-status-light.one').css({'animation': 'off 1.5s  infinite', '-moz-animation': 'off 1.5s  infinite', '-webkit-animation': 'off 1.5s  infinite'});
-            $('.job-status-light.two').css({'animation': 'off 1.5s 0.5s infinite', '-moz-animation': 'off 1.5s 0.5s infinite', '-webkit-animation': 'off 1.5s 0.5s infinite'});
-            $('.job-status-light.three').css({'animation': 'off 1.5s 1s infinite', '-moz-animation': 'off 1.5s 1s infinite', '-webkit-animation': 'off 1.5s 1s infinite'});
-        } else if ( status.state == 'paused'){
-            $('.job-status-light').css({'animation': 'pause 1.5s  infinite', '-moz-animation': 'pause 1.5s  infinite', '-webkit-animation': 'pause 1.5s  infinite'});
-        } else {
-            $('.job-status-light').css({'animation': 'none', '-moz-animation': 'none', '-webkit-animation': 'none'});
-        }
+        // if (status.state == 'running') {
+        //     $('.job-status-light.one').css({'animation': 'off 1.5s  infinite', '-moz-animation': 'off 1.5s  infinite', '-webkit-animation': 'off 1.5s  infinite'});
+        //     $('.job-status-light.two').css({'animation': 'off 1.5s 0.5s infinite', '-moz-animation': 'off 1.5s 0.5s infinite', '-webkit-animation': 'off 1.5s 0.5s infinite'});
+        //     $('.job-status-light.three').css({'animation': 'off 1.5s 1s infinite', '-moz-animation': 'off 1.5s 1s infinite', '-webkit-animation': 'off 1.5s 1s infinite'});
+        // } else if ( status.state == 'paused'){
+        //     $('.job-status-light').css({'animation': 'pause 1.5s  infinite', '-moz-animation': 'pause 1.5s  infinite', '-webkit-animation': 'pause 1.5s  infinite'});
+        // } else {
+        //     $('.job-status-light').css({'animation': 'none', '-moz-animation': 'none', '-webkit-animation': 'none'});
+        // }
 	});
  	
 	function resetFormElement(e) {
