Fix unit value conversion for A,B,C axes

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -173,7 +173,7 @@
                         <div class="small-10 columns">
                           <label class="noselect">
                             A
-                            <span class="units">&nbsp;</span>
+                            <span class="rotunits">o&nbsp;</span>
                             <input class="posa pos doselect axi" maxlength="6" type="number">
                           </label>
                         </div>
@@ -183,7 +183,7 @@
                         <div class="small-10 columns">
                           <label class="noselect">
                             B
-                            <span class="units">&nbsp;</span>
+                            <span class="rotunits">o&nbsp;</span>
                             <input class="posb pos doselect axi" maxlength="6" type="number">
                           </label>
                         </div>
