update queue on submit job click

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -249,7 +249,8 @@
 				fabmo.notify('error', err);
 			}
 			resetFormElement($('#file'));
-			//updateQueue();
+			updateQueue();
+			$('#nav-pending').click();
 		});
 	});
 
