Add reconnect event to apps

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1905,11 +1905,12 @@
           update();
         });
       });
-
-
       setupAppManager();
       setupUserManager();
 
+      fabmo.on('reconnect', function() {
+        update();
+      });
     });
   </script>
 
