--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -275,21 +275,23 @@
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="waiting_container">
-                <svg width="150px" height="100px" viewBox="0 0 247.8 314.4">
+                <svg width="300px" height="300px" viewBox="0 0 247.8 314.4">
                     <style type="text/css">
-                        .st0{fill:#DD8728;}
+                        .st0{fill:#666;}
                     </style>
-                    <path class="st0 main" d="M81.6,232.4c-13,0-23.5-11.1-23.3-24c0.2-12.9,11.1-23.7,24.2-23.3l77.5,0c12.9,0,23.7,11.6,23.3,24.4
-                        c-0.4,12.8-12,23.7-24.8,22.9"/>
-                    <path class="st0 main" d="M96.3,251h47l0.1-0.5l0.1,40.8c0,13-11.1,23.3-24,23.2c-12.9-0.2-23.7-11.2-23.3-24.3l0-39.7"/>
-                    <path class="st0 main" d="M183.3,40V0l-0.2,0.1c-48.3,0-87.3,33.2-87.3,74.2l0,92.6l0.4,0.1h47l0.1-0.1l-0.1-86.5v0
-                        c0-22.3,17.7-40.3,39.6-40.3"/>
-                    <path class="st0 chip one" d="M24.8,207.1l25.3,35.7L10.5,228l1.4,0.1c-7.1-1-12.6-8-11.7-15.2c0.9-7.3,8.3-12.7,15.6-11.6
-                        c4.7,0.7,8.6,4,10.4,8.3"/>
-                    <path class="st0 chip two" d="M234.6,234.6l-48.2,7l34.8-31.8l-0.8,1.3c4.6-6.6,14.4-8.5,21-3.9c6.8,4.6,8.3,14.7,3.6,21.3
-                        c-3,4.3-8.3,6.6-13.5,6.2"/>
-                    <path class="st0 chip three" d="M33.1,279.5L67.6,303l-40.4,0l1.3-0.4c-6.7,1.5-14-3-15.6-9.7c-1.6-6.9,3.2-14.1,10-15.6
-                        c4.4-0.9,9.1,0.7,12.1,3.9"/>
+                    <path class='st0' d="M151.4,77.1v8.5c0,0.3-0.1,0.6-0.3,0.9c-0.2,0.3-0.5,0.4-0.8,0.5l-7,1.1c-0.5,1.4-1,2.5-1.5,3.5c0.9,1.3,2.2,3,4.1,5.3
+		c0.3,0.3,0.4,0.6,0.4,1c0,0.3-0.1,0.6-0.3,0.9c-0.7,0.9-1.9,2.3-3.8,4.1c-1.8,1.8-3,2.7-3.6,2.7c-0.3,0-0.6-0.1-1-0.3l-5.3-4.1
+		c-1.1,0.6-2.3,1.1-3.5,1.4c-0.4,3.5-0.8,5.8-1.1,7.1c-0.2,0.7-0.6,1.1-1.4,1.1h-8.5c-0.4,0-0.7-0.1-0.9-0.3s-0.4-0.5-0.4-0.8
+		l-1.1-7c-1.2-0.4-2.4-0.9-3.4-1.4l-5.4,4.1c-0.3,0.2-0.6,0.3-1,0.3c-0.4,0-0.7-0.1-1-0.4c-3.2-2.9-5.3-5-6.3-6.4
+		c-0.2-0.3-0.3-0.5-0.3-0.9c0-0.3,0.1-0.6,0.3-0.9c0.4-0.5,1-1.4,1.9-2.5c0.9-1.2,1.6-2.1,2.1-2.7c-0.7-1.3-1.2-2.5-1.6-3.8l-7-1
+		c-0.3-0.1-0.6-0.2-0.8-0.5c-0.2-0.3-0.3-0.6-0.3-0.9V77c0-0.3,0.1-0.6,0.3-0.9c0.2-0.3,0.4-0.4,0.7-0.5l7.1-1.1
+		c0.4-1.2,0.9-2.3,1.5-3.5c-1-1.4-2.4-3.2-4.1-5.3c-0.3-0.3-0.4-0.6-0.4-0.9c0-0.3,0.1-0.5,0.3-0.9c0.7-0.9,1.9-2.3,3.8-4.1
+		c1.8-1.8,3-2.7,3.6-2.7c0.3,0,0.7,0.1,1,0.4l5.3,4.1c1.1-0.6,2.3-1.1,3.5-1.4c0.4-3.5,0.8-5.8,1.1-7.1c0.2-0.7,0.6-1.1,1.4-1.1h8.5
+		c0.4,0,0.7,0.1,0.9,0.3c0.3,0.2,0.4,0.5,0.4,0.8l1.1,7c1.2,0.4,2.4,0.9,3.4,1.4l5.4-4.1c0.2-0.2,0.5-0.3,0.9-0.3
+		c0.3,0,0.6,0.1,1,0.4c3.3,3,5.4,5.2,6.3,6.5c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.1,0.6-0.3,0.9c-0.4,0.5-1,1.4-1.9,2.5
+		c-0.9,1.2-1.6,2.1-2.1,2.7c0.7,1.3,1.2,2.5,1.6,3.7l7,1.1c0.3,0.1,0.6,0.2,0.8,0.5C151.3,76.5,151.4,76.8,151.4,77.1z M129,88.2
+		c1.9-1.9,2.9-4.2,2.9-6.9c0-2.7-1-5-2.9-6.9c-1.9-1.9-4.2-2.9-6.9-2.9c-2.7,0-5,1-6.9,2.9c-1.9,1.9-2.9,4.2-2.9,6.9
+		c0,2.7,1,5,2.9,6.9c1.9,1.9,4.2,2.9,6.9,2.9C124.8,91,127.1,90.1,129,88.2z"/>
                 </svg>
             </div>
             <div id="app-client-container">
@@ -310,7 +312,7 @@
           <div class="modalLogo">
                   <svg width="100%" height="100%" viewBox="-50 0 400 314.4">
                     <style type="text/css">
-                        .st0{fill:#DD8728;}
+                        .st0{fill:#666;}
                     </style>
                     <path class="st0 main" d="M81.6,232.4c-13,0-23.5-11.1-23.3-24c0.2-12.9,11.1-23.7,24.2-23.3l77.5,0c12.9,0,23.7,11.6,23.3,24.4
                         c-0.4,12.8-12,23.7-24.8,22.9"/>
