--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -15,7 +15,28 @@
   <form>
   <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
   </form>
-   <div class="loader"></div>
+   <div class="loader">
+      <svg width="15%" viewBox="0 0 550 550">
+      <style type="text/css">
+          .maingear{fill:#666;}
+      </style>
+      <path class='maingear' d="M550,234.8v79.5c0,2.8-0.9,5.6-2.8,8.4s-4.7,3.7-7.5,4.7l-65.5,10.3c-4.7,13.1-9.4,23.4-14,32.7
+      c8.4,12.2,20.6,28.1,38.4,49.6c2.8,2.8,3.7,5.6,3.7,9.4c0,2.8-0.9,5.6-2.8,8.4c-6.5,8.4-17.8,21.5-35.5,38.4
+      c-16.8,16.8-28.1,25.3-33.7,25.3c-2.8,0-5.6-0.9-9.4-2.8l-49.6-38.4c-10.3,5.6-21.5,10.3-32.7,13.1c-3.7,32.7-7.5,54.3-10.3,66.4
+      c-1.9,6.5-5.6,10.3-13.1,10.3h-79.5c-3.7,0-6.5-0.9-8.4-2.8s-3.7-4.7-3.7-7.5l-10.3-65.5c-11.2-3.7-22.4-8.4-31.8-13.1L131,499.5
+      c-2.8,1.9-5.6,2.8-9.4,2.8c-3.7,0-6.5-0.9-9.4-3.7c-29.9-27.1-49.6-46.8-58.9-59.9c-1.9-2.8-2.8-4.7-2.8-8.4c0-2.8,0.9-5.6,2.8-8.4
+      c3.7-4.7,9.4-13.1,17.8-23.4c8.4-11.2,15-19.6,19.6-25.3c-6.5-12.2-11.2-23.4-15-35.5l-65.5-9.4c-2.8-0.9-5.6-1.9-7.5-4.7
+      C0.9,320.8,0,318,0,315.2v-81.4c0-2.8,0.9-5.6,2.8-8.4c1.9-2.8,3.7-3.7,6.5-4.7l66.4-10.3c3.7-11.2,8.4-21.5,14-32.7
+      c-9.4-13.1-22.4-29.9-38.4-49.6c-2.8-2.8-3.7-5.6-3.7-8.4c0-2.8,0.9-4.7,2.8-8.4c6.5-8.4,17.8-21.5,35.5-38.4
+      c16.8-16.8,28.1-25.3,33.7-25.3c2.8,0,6.5,0.9,9.4,3.7l49.6,38.4c10.3-5.6,21.5-10.3,32.7-13.1c3.7-32.7,7.5-54.3,10.3-66.4
+      C223.6,3.7,227.3,0,234.8,0h79.5c3.7,0,6.5,0.9,8.4,2.8c2.8,1.9,3.7,4.7,3.7,7.5l10.3,65.5c11.2,3.7,22.4,8.4,31.8,13.1L419,50.5
+      c1.9-1.9,4.7-2.8,8.4-2.8c2.8,0,5.6,0.9,9.4,3.7c30.9,28.1,50.5,48.6,58.9,60.8c1.9,1.9,2.8,4.7,2.8,7.5s-0.9,5.6-2.8,8.4
+      c-3.7,4.7-9.4,13.1-17.8,23.4c-8.4,11.2-15,19.6-19.6,25.3c6.5,12.2,11.2,23.4,15,34.6l65.5,10.3c2.8,0.9,5.6,1.9,7.5,4.7
+      C549.1,229.2,550,232,550,234.8z M340.5,338.6c17.8-17.8,27.1-39.3,27.1-64.5c0-25.3-9.4-46.8-27.1-64.5
+      c-17.8-17.8-39.3-27.1-64.5-27.1c-25.3,0-46.8,9.4-64.5,27.1s-27.1,39.3-27.1,64.5c0,25.3,9.4,46.8,27.1,64.5s39.3,27.1,64.5,27.1
+      C301.2,364.8,322.7,356.4,340.5,338.6z"/>
+      </svg>
+   </div>
    <div class="collapseLeft"></div>
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
@@ -275,23 +296,25 @@
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="waiting_container">
-                <svg width="300px" height="300px" viewBox="0 0 247.8 314.4">
+                <svg width="20%" viewBox="0 0 550 550">
                     <style type="text/css">
-                        .st0{fill:#666;}
+                        .maingear{fill:#666;}
                     </style>
-                    <path class='st0' d="M151.4,77.1v8.5c0,0.3-0.1,0.6-0.3,0.9c-0.2,0.3-0.5,0.4-0.8,0.5l-7,1.1c-0.5,1.4-1,2.5-1.5,3.5c0.9,1.3,2.2,3,4.1,5.3
-		c0.3,0.3,0.4,0.6,0.4,1c0,0.3-0.1,0.6-0.3,0.9c-0.7,0.9-1.9,2.3-3.8,4.1c-1.8,1.8-3,2.7-3.6,2.7c-0.3,0-0.6-0.1-1-0.3l-5.3-4.1
-		c-1.1,0.6-2.3,1.1-3.5,1.4c-0.4,3.5-0.8,5.8-1.1,7.1c-0.2,0.7-0.6,1.1-1.4,1.1h-8.5c-0.4,0-0.7-0.1-0.9-0.3s-0.4-0.5-0.4-0.8
-		l-1.1-7c-1.2-0.4-2.4-0.9-3.4-1.4l-5.4,4.1c-0.3,0.2-0.6,0.3-1,0.3c-0.4,0-0.7-0.1-1-0.4c-3.2-2.9-5.3-5-6.3-6.4
-		c-0.2-0.3-0.3-0.5-0.3-0.9c0-0.3,0.1-0.6,0.3-0.9c0.4-0.5,1-1.4,1.9-2.5c0.9-1.2,1.6-2.1,2.1-2.7c-0.7-1.3-1.2-2.5-1.6-3.8l-7-1
-		c-0.3-0.1-0.6-0.2-0.8-0.5c-0.2-0.3-0.3-0.6-0.3-0.9V77c0-0.3,0.1-0.6,0.3-0.9c0.2-0.3,0.4-0.4,0.7-0.5l7.1-1.1
-		c0.4-1.2,0.9-2.3,1.5-3.5c-1-1.4-2.4-3.2-4.1-5.3c-0.3-0.3-0.4-0.6-0.4-0.9c0-0.3,0.1-0.5,0.3-0.9c0.7-0.9,1.9-2.3,3.8-4.1
-		c1.8-1.8,3-2.7,3.6-2.7c0.3,0,0.7,0.1,1,0.4l5.3,4.1c1.1-0.6,2.3-1.1,3.5-1.4c0.4-3.5,0.8-5.8,1.1-7.1c0.2-0.7,0.6-1.1,1.4-1.1h8.5
-		c0.4,0,0.7,0.1,0.9,0.3c0.3,0.2,0.4,0.5,0.4,0.8l1.1,7c1.2,0.4,2.4,0.9,3.4,1.4l5.4-4.1c0.2-0.2,0.5-0.3,0.9-0.3
-		c0.3,0,0.6,0.1,1,0.4c3.3,3,5.4,5.2,6.3,6.5c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.1,0.6-0.3,0.9c-0.4,0.5-1,1.4-1.9,2.5
-		c-0.9,1.2-1.6,2.1-2.1,2.7c0.7,1.3,1.2,2.5,1.6,3.7l7,1.1c0.3,0.1,0.6,0.2,0.8,0.5C151.3,76.5,151.4,76.8,151.4,77.1z M129,88.2
-		c1.9-1.9,2.9-4.2,2.9-6.9c0-2.7-1-5-2.9-6.9c-1.9-1.9-4.2-2.9-6.9-2.9c-2.7,0-5,1-6.9,2.9c-1.9,1.9-2.9,4.2-2.9,6.9
-		c0,2.7,1,5,2.9,6.9c1.9,1.9,4.2,2.9,6.9,2.9C124.8,91,127.1,90.1,129,88.2z"/>
+                    <path class='maingear' d="M550,234.8v79.5c0,2.8-0.9,5.6-2.8,8.4s-4.7,3.7-7.5,4.7l-65.5,10.3c-4.7,13.1-9.4,23.4-14,32.7
+		c8.4,12.2,20.6,28.1,38.4,49.6c2.8,2.8,3.7,5.6,3.7,9.4c0,2.8-0.9,5.6-2.8,8.4c-6.5,8.4-17.8,21.5-35.5,38.4
+		c-16.8,16.8-28.1,25.3-33.7,25.3c-2.8,0-5.6-0.9-9.4-2.8l-49.6-38.4c-10.3,5.6-21.5,10.3-32.7,13.1c-3.7,32.7-7.5,54.3-10.3,66.4
+		c-1.9,6.5-5.6,10.3-13.1,10.3h-79.5c-3.7,0-6.5-0.9-8.4-2.8s-3.7-4.7-3.7-7.5l-10.3-65.5c-11.2-3.7-22.4-8.4-31.8-13.1L131,499.5
+		c-2.8,1.9-5.6,2.8-9.4,2.8c-3.7,0-6.5-0.9-9.4-3.7c-29.9-27.1-49.6-46.8-58.9-59.9c-1.9-2.8-2.8-4.7-2.8-8.4c0-2.8,0.9-5.6,2.8-8.4
+		c3.7-4.7,9.4-13.1,17.8-23.4c8.4-11.2,15-19.6,19.6-25.3c-6.5-12.2-11.2-23.4-15-35.5l-65.5-9.4c-2.8-0.9-5.6-1.9-7.5-4.7
+		C0.9,320.8,0,318,0,315.2v-81.4c0-2.8,0.9-5.6,2.8-8.4c1.9-2.8,3.7-3.7,6.5-4.7l66.4-10.3c3.7-11.2,8.4-21.5,14-32.7
+		c-9.4-13.1-22.4-29.9-38.4-49.6c-2.8-2.8-3.7-5.6-3.7-8.4c0-2.8,0.9-4.7,2.8-8.4c6.5-8.4,17.8-21.5,35.5-38.4
+		c16.8-16.8,28.1-25.3,33.7-25.3c2.8,0,6.5,0.9,9.4,3.7l49.6,38.4c10.3-5.6,21.5-10.3,32.7-13.1c3.7-32.7,7.5-54.3,10.3-66.4
+		C223.6,3.7,227.3,0,234.8,0h79.5c3.7,0,6.5,0.9,8.4,2.8c2.8,1.9,3.7,4.7,3.7,7.5l10.3,65.5c11.2,3.7,22.4,8.4,31.8,13.1L419,50.5
+		c1.9-1.9,4.7-2.8,8.4-2.8c2.8,0,5.6,0.9,9.4,3.7c30.9,28.1,50.5,48.6,58.9,60.8c1.9,1.9,2.8,4.7,2.8,7.5s-0.9,5.6-2.8,8.4
+		c-3.7,4.7-9.4,13.1-17.8,23.4c-8.4,11.2-15,19.6-19.6,25.3c6.5,12.2,11.2,23.4,15,34.6l65.5,10.3c2.8,0.9,5.6,1.9,7.5,4.7
+		C549.1,229.2,550,232,550,234.8z M340.5,338.6c17.8-17.8,27.1-39.3,27.1-64.5c0-25.3-9.4-46.8-27.1-64.5
+		c-17.8-17.8-39.3-27.1-64.5-27.1c-25.3,0-46.8,9.4-64.5,27.1s-27.1,39.3-27.1,64.5c0,25.3,9.4,46.8,27.1,64.5s39.3,27.1,64.5,27.1
+		C301.2,364.8,322.7,356.4,340.5,338.6z"/>
                 </svg>
             </div>
             <div id="app-client-container">
@@ -309,28 +332,11 @@
  
       <div class="modalDim"></div>
       <div class="newModal">
-          <div class="modalLogo">
-                  <svg width="100%" height="100%" viewBox="-50 0 400 314.4">
-                    <style type="text/css">
-                        .st0{fill:#666;}
-                    </style>
-                    <path class="st0 main" d="M81.6,232.4c-13,0-23.5-11.1-23.3-24c0.2-12.9,11.1-23.7,24.2-23.3l77.5,0c12.9,0,23.7,11.6,23.3,24.4
-                        c-0.4,12.8-12,23.7-24.8,22.9"/>
-                    <path class="st0 main" d="M96.3,251h47l0.1-0.5l0.1,40.8c0,13-11.1,23.3-24,23.2c-12.9-0.2-23.7-11.2-23.3-24.3l0-39.7"/>
-                    <path class="st0 main" d="M183.3,40V0l-0.2,0.1c-48.3,0-87.3,33.2-87.3,74.2l0,92.6l0.4,0.1h47l0.1-0.1l-0.1-86.5v0
-                        c0-22.3,17.7-40.3,39.6-40.3"/>
-                    <path class="st0 chip one" d="M24.8,207.1l25.3,35.7L10.5,228l1.4,0.1c-7.1-1-12.6-8-11.7-15.2c0.9-7.3,8.3-12.7,15.6-11.6
-                        c4.7,0.7,8.6,4,10.4,8.3"/>
-                    <path class="st0 chip two" d="M234.6,234.6l-48.2,7l34.8-31.8l-0.8,1.3c4.6-6.6,14.4-8.5,21-3.9c6.8,4.6,8.3,14.7,3.6,21.3
-                        c-3,4.3-8.3,6.6-13.5,6.2"/>
-                    <path class="st0 chip three" d="M33.1,279.5L67.6,303l-40.4,0l1.3-0.4c-6.7,1.5-14-3-15.6-9.7c-1.6-6.9,3.2-14.1,10-15.6
-                        c4.4-0.9,9.1,0.7,12.1,3.9"/>
-                </svg>
-          </div>
+
 
           <div class="modalContent">
 
-            <h3 class="modalTitle">Title<h3>
+            <h3 class="modalTitle">Title</h3>
             <div class="modalSubContent">
               <h4 class="modalDialogue"> blah blah blah this is some text to tell you why you are getting a modal</h4>
               <div class="modalImage">
@@ -341,38 +347,10 @@
               <div class="modalCancel"><span>Cancel</span></div>
               <div class="modalOkay"><span>Okay</span></div>
           </div>
-      <div>
+      </div>
+      </div>
 
       <script type="text/javascript" src="/js/libs/spin.min.js"></script>
-      <script type="text/javascript">
-        var opts = {
-            lines: 13 // The number of lines to draw
-          , length: 28 // The length of each line
-          , width: 14 // The line thickness
-          , radius: 42 // The radius of the inner circle
-          , scale: 1 // Scales overall size of the spinner
-          , corners: 1 // Corner roundness (0..1)
-          , color: '#000' // #rgb or #rrggbb or array of colors
-          , opacity: 0.25 // Opacity of the lines
-          , rotate: 0 // The rotation offset
-          , direction: 1 // 1: clockwise, -1: counterclockwise
-          , speed: 1 // Rounds per second
-          , trail: 60 // Afterglow percentage
-          , fps: 20 // Frames per second when using setTimeout() as a fallback for CSS
-          , zIndex: 2e9 // The z-index (defaults to 2000000000)
-          , className: 'spinner' // The CSS class to assign to the spinner
-          , top: '50%' // Top position relative to parent
-          , left: '50%' // Left position relative to parent
-          , shadow: true // Whether to render a shadow
-          , hwaccel: true // Whether to use hardware acceleration
-          , position: 'absolute' // Element positioning
-        }
-        var target = document.getElementById('spinner')
-        var spinner = new Spinner(opts).spin(target);
-        var waiting_spinner = new Spinner( {
-          color : '#2E3865',
-        }).spin(document.getElementById('waiting_spinner'))
-      </script>
 	    <script type="text/javascript" src="js/libs/require.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
   </body>
