adding udev back to package.json

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -185,6 +185,7 @@
 	$(document).foundation();
 
 	fabmo.on('change', function(topic) {
+		console.log(topic);
 		if (topic === 'jobs') {
 		updateQueue();
 		updateHistory();
