--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -59,6 +59,9 @@
             <div class="inset">
               <div class="percentage"></div>
             </div>
+            <div class="elapsed_time_small">
+                <p class="elapsed_time_text">0s</p>
+             </div>
           </div>
 
           <div class="load_container">
@@ -67,7 +70,12 @@
                 </div>
               </div>
               <div class="percent_comp">10%</div>
+              <div class="elapsed_time">
+                  <p class="elapsed_time_label">time elapsed : <p>
+                  <p class="elapsed_time_text">0s</p>
+               </div>
            </div>
+
 
           <span class='fabmo-pause-button'>
             <div class='pauseJob'>STOP</div>
@@ -107,7 +115,7 @@
                 <div id="tool-name" style="padding-left: 10px" class="noselect">
                 &nbsp;
                 </div>
-                
+
                 </div>
             </section>
 
@@ -144,7 +152,7 @@
               <ul class="off-canvas-list" id="util-menu-small">
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Manager</span></a></li>
-                <li><a href="#/app/editor" id="icon_editor"><span>Editor</span></a></li>          
+                <li><a href="#/app/editor" id="icon_editor"><span>Editor</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
                 <li><a href="#/app/network-manager" id="icon_network"><span>Network</span></a></li>
@@ -329,7 +337,7 @@
       </div>
 
       <!-- The Dialog -->
- 
+
       <div class="modalDim"></div>
       <div class="newModal">
 
