--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-  <form>
+      <div id='mainContent'>
+      </div>
+      <form>
   <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
   </form>
    <div class="loader">
@@ -152,7 +154,7 @@
               </ul>
 
             </div>
-            <div class="logout_link_container"><a href='authentication/logout'>logout</a></div>
+            <div class="logout_link_container"><a href='#/authentication'>logout</a></div>
           </aside>
 
           <aside class="DRO" id="right-menu">
@@ -349,7 +351,6 @@
           </div>
       </div>
       </div>
-
       <script type="text/javascript" src="/js/libs/spin.min.js"></script>
 	    <script type="text/javascript" src="js/libs/require.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
