Fix spelling error in README Update video to use engine configuration Fix bug in machine name in configuration app Make video failover more graceful at startup

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1900,7 +1900,7 @@ $(document).ready(function() {
         }
     });
 
-    $('#input-name').change( function(evt) {
+    $('#input-machine-name').change( function(evt) {
         var id = {name: this.value};
         fabmo.setNetworkIdentity(id, function(err, data) {
             update();
