stop much bigger

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -80,7 +80,12 @@
 
 
           <span class='fabmo-pause-button'>
-            <div class='pauseJob'>STOP</div>
+            <div class='pauseJob'>
+              <p>STOP</p>
+              <div class='pauseJobInner'>
+                
+              </div>
+            </div>
           </span>
 
           <span class='fabmo-resume-stop'>
