--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -37,7 +37,7 @@
   <div class="content active dropzone" id="tabpending">
 	  <div id="droptarget">
   		</div>
-			<div class="row title jobs-title">
+			<div class="title jobs-title">
 				<div class="small-12 columns">
 					<h4 class="up-next">Up Next</h4>
 					<h4 class="now-running">Now Running</h4>
