--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -14,8 +14,8 @@
   <body>
       <div id='mainContent'>
       </div>
-      <form>
-  <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
+  <form>
+      <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
   </form>
    <div class="loader">
       <svg width="15%" viewBox="0 0 550 550">
@@ -45,7 +45,7 @@
 
           <div class="footBar fabmo-file-control">
             <div class="currentContainer">
-              <span class="currentJobTitle" id="marquee"></span>
+              <p class="currentJobTitle" ></p>
             </div>
             <div class="radial_progress">
               <div class="perecent_circle">
@@ -62,7 +62,7 @@
               <div class="percentage"></div>
             </div>
             <div class="elapsed_time_small">
-                <p class="elapsed_time_text">0s</p>
+                <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i>:<p class="elapsed_time_text">0s</p></p>
              </div>
           </div>
 
@@ -73,7 +73,7 @@
               </div>
               <div class="percent_comp">10%</div>
               <div class="elapsed_time">
-                  <p class="elapsed_time_label">time elapsed : <p>
+                  <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i> :  <p>
                   <p class="elapsed_time_text">0s</p>
                </div>
            </div>
@@ -162,7 +162,7 @@
                 <li><a href="#/app/editor" id="icon_editor"><span>Editor</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
-                <li><a href="#/app/network-manager" id="icon_network"><span>Network</span></a></li>
+                 <li><a href="#/app/network-manager" id="icon_network"><span>Network</span></a></li>
                 <li><a href="#" id="icon_colapse"><span>Collapse</span></a></li>
               </ul>
 
