stop large pill new break points

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -43,57 +43,7 @@
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
 
-          <div class="footBar fabmo-file-control">
-            <div class="currentContainer">
-              <p class="currentJobTitle" ></p>
-            </div>
-            <div class="radial_progress">
-              <div class="perecent_circle">
-                <div class="mask full">
-                  <div class="fill"></div>
-                </div>
-                <div class="mask half">
-                  <div class="fill"></div>
-                  <div class="fill fix"></div>
-                </div>
-              <div class="shadow"></div>
-            </div>
-            <div class="inset">
-              <div class="percentage"></div>
-            </div>
-            <div class="elapsed_time_small">
-                <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i>:<p class="elapsed_time_text">0s</p></p>
-             </div>
-          </div>
 
-          <div class="load_container">
-              <div class="loading_bar">
-                <div class="horizontal_fill">
-                </div>
-              </div>
-              <div class="percent_comp">10%</div>
-              <div class="elapsed_time">
-                  <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i> :  <p>
-                  <p class="elapsed_time_text">0s</p>
-               </div>
-           </div>
-
-
-          <span class='fabmo-pause-button'>
-            <div class='pauseJob'>
-              <p>STOP</p>
-              <div class='pauseJobInner'>
-                
-              </div>
-            </div>
-          </span>
-
-          <span class='fabmo-resume-stop'>
-            <div class='resumeJob'>RESUME</div>
-            <div class='stopJob'>QUIT</div>
-          </span>
-
-          </div>
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
@@ -364,6 +314,54 @@
           </div>
       </div>
       </div>
+                <div class="footBar fabmo-file-control">
+            <div class="currentContainer">
+              <p class="currentJobTitle" ></p>
+            </div>
+            <div class="radial_progress">
+              <div class="perecent_circle">
+                <div class="mask full">
+                  <div class="fill"></div>
+                </div>
+                <div class="mask half">
+                  <div class="fill"></div>
+                  <div class="fill fix"></div>
+                </div>
+              <div class="shadow"></div>
+            </div>
+            <div class="inset">
+              <div class="percentage"></div>
+            </div>
+            <div class="elapsed_time_small">
+                <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i>:<p class="elapsed_time_text">0s</p></p>
+             </div>
+          </div>
+
+          <div class="load_container">
+              <div class="loading_bar">
+                <div class="horizontal_fill">
+                </div>
+              </div>
+              <div class="percent_comp">10%</div>
+              <div class="elapsed_time">
+                  <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i> :  <p>
+                  <p class="elapsed_time_text">0s</p>
+               </div>
+           </div>
+
+
+          
+            <div class='pauseJob fabmo-pause-button'>
+              <p>STOP</p>
+            </div>
+
+
+          <span class='fabmo-resume-stop'>
+            <div class='resumeJob'>RESUME</div>
+            <div class='stopJob'>QUIT</div>
+          </span>
+
+          </div>
       <script type="text/javascript" src="/js/libs/spin.min.js"></script>
 	    <script type="text/javascript" src="js/libs/require.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
