Fix name display, styling

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -83,7 +83,7 @@
             <div class='pauseJob'>
               <p>STOP</p>
               <div class='pauseJobInner'>
-                
+
               </div>
             </div>
           </span>
@@ -127,7 +127,7 @@
             </section>
 
             <!-- ***** Tool Position Section ***** -->
-            <section class="right show-for-small-up fabmo-status" id="right-position-container">
+            <section class="right show-for-medium-up fabmo-status" id="right-position-container">
             <div style="display: table-row;">
                 <div class="xaxis" style="display: table-cell; padding-right: 1em"><label>X : <span class="posx">X.XXX</span></label></div>
                 <div class="yaxis" style="display: table-cell; padding-right: 1em"><label>Y : <span class="posy">Y.YYY</span></label></div>
